--- a/_posts/2022-06-01-temporl.md
+++ b/_posts/2022-06-01-temporl.md
@@ -108,7 +108,7 @@ We are using [<font color="lightblue">pyscript</font>](https://pyscript.net/) fo
         Agents always start in the blue field and need to reach the orange field where they get a reward of $\color{gray}+1$. Falling down the cliff, i.e. black
         squares results in a reward of $\color{gray}-1$. Otherwise, the reward is always $\color{gray}0$. An episode is at most $\color{gray}100$ steps long.
         *Avg. Train Reward* shows the average training reward over the last $\color{gray}100$ episodes. The agents use a fixed $\color{gray}\epsilon$ of $\color{gray}0.1$.
-        The maximal $\color{gray}\mathcal{Q}$-values are overlayed in green. The brighter the shade, the higher the value.
+        The maximal $\color{gray}\mathcal{Q}$-values are overlayed in green. The brighter the shade, the higher the value. <strong>When selecting a different environment you need to press "(RE-)START"</strong>
     </p>
     <br>
 </div>
