Add the COSEAL paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,14 @@
 ---
 ---
+@article{eimer-arxiv25a,
+title = {Best Practices For Empirical Meta-Algorithmic Research Guidelines from the COSEAL Research Network},
+author = {Theresa Eimer and Lennart Schäpermeier and André Biedenkapp and Alexander Tornede and Lars Kotthoff and Pieter Leyman and Matthias Feurer and Katharina Eggensperger and Kaitlin Maile and Tanja Tornede and Anna Kozak and Ke Xue and Marcel Wever and Mitra Baratchi and Damir Pulatov and Heike Trautmann and Haniye Kashgarani and Marius Lindauer},
+year = {2025},
+journal = {arXiv:2512.16491},
+  arxiv = {arXiv:2512.16491},
+  bibtex_show={true},
+  abstract={Empirical research on meta-algorithmics, such as algorithm selection, configuration, and scheduling, often relies on extensive and thus computationally expensive experiments. With the large degree of freedom we have over our experimental setup and design comes a plethora of possible error sources that threaten the scalability and validity of our scientific insights. Best practices for meta-algorithmic research exist, but they are scattered between different publications and fields, and continue to evolve separately from each other. In this report, we collect good practices for empirical meta-algorithmic research across the subfields of the COSEAL community, encompassing the entire experimental cycle: from formulating research questions and selecting an experimental design, to executing ex- periments, and ultimately, analyzing and presenting results impartially. It establishes the current state-of-the-art practices within meta-algorithmic research and serves as a guideline to both new researchers and practitioners in meta-algorithmic fields.}
+}
 
 @article{nguyen-arxiv25a,
   title = {Deep Reinforcement Learning for Dynamic Algorithm Configuration: A Case Study on Optimizing OneMax with the (1+(λ,λ))-GA},
