ADD AAMAS paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,21 @@
 ---
 ---
+@inproceedings{biedenka-aamas26a,
+  title = {Contextual Intelligence: The Next Leap for Reinforcement Learning},
+  author = {Biedenkapp, A.},
+  year = {2026},
+  booktitle    = {Proceedings of the 25th International Conference on Autonomous Agents
+                  and Multiagent Systems, {AAMAS} 2026},
+  publisher    = {International Foundation for Autonomous Agents and Multiagent Systems
+                  / {ACM}},
+  bibtex_show={true},
+  openreview={vtz8ZWRz67},
+  pdf = {paper/26-AAMAS-Blue-Sky.pdf},
+    abstract= "Reinforcement learning (RL) has produced spectacular results in games, robotics, and continuous control. Yet, despite these successes, learned policies often fail to generalize beyond their training distribution, limiting real-world impact. Recent work on contextual RL (cRL) shows that exposing agents to environment characteristics – contexts – can improve zero-shot transfer. So far, the community has treated context as a monolithic, static observable, an approach that constrains the generalization capabilities of RL agents.
+To achieve contextual intelligence we first propose a novel taxonomy of contexts that separates allogenic (environment-imposed) from autogenic (agent-driven) factors. We identify three fundamental research directions that must be addressed to promote truly contextual intelligence: (1) Learning with heterogeneous contexts – explicitly exploit the taxonomy levels so agents can reason about their influence on the world and vice versa; (2) Multi-time-scale modeling – recognize that allogenic variables evolve slowly or remain static, whereas autogenic variables may change within an episode, potentially requiring different learning mechanisms; (3) Integration of abstract, high-level contexts – incorporate roles, resource & regulatory regimes, uncertainties, and other non-physical descriptors that crucially influence behavior.
+We envision context as a first-class modeling primitive, empowering agents to reason about who they are, what the world permits, and how both evolve over time. By doing so, we aim to catalyze a new generation of context-aware agents that can be deployed safely and efficiently in the real world."
+}
+
 @article{eimer-arxiv25a,
 title = {Best Practices For Empirical Meta-Algorithmic Research Guidelines from the COSEAL Research Network},
 author = {Theresa Eimer and Lennart Schäpermeier and André Biedenkapp and Alexander Tornede and Lars Kotthoff and Pieter Leyman and Matthias Feurer and Katharina Eggensperger and Kaitlin Maile and Tanja Tornede and Anna Kozak and Ke Xue and Marcel Wever and Mitra Baratchi and Damir Pulatov and Heike Trautmann and Haniye Kashgarani and Marius Lindauer},
