--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @inproceedings{biedenka-aamas26a,
   title = {Contextual Intelligence: The Next Leap for Reinforcement Learning},
-  author = {Biedenkapp, A.},
+  author = {Biedenkapp, André},
   year = {2026},
   booktitle    = {Proceedings of the 25th International Conference on Autonomous Agents
                   and Multiagent Systems, {AAMAS} 2026},
