Maint: Make special track acknowledgements easier

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,9 +5,10 @@
   author = {Biedenkapp, André},
   year = {2026},
   booktitle    = {Proceedings of the 25th International Conference on Autonomous Agents
-                  and Multiagent Systems, {AAMAS} 2026},
+                  and Multiagent Systems, {AAMAS}'26},
   publisher    = {International Foundation for Autonomous Agents and Multiagent Systems
                   / {ACM}},
+  specialtrack = {Blue Sky Ideas Track},
   bibtex_show={true},
   openreview={vtz8ZWRz67},
   pdf = {paper/26-AAMAS-Blue-Sky.pdf},
@@ -223,7 +224,8 @@ poster = {poster/DOMW_poster.pdf},
     title = {HPO-RL-Bench: A Zero-Cost Benchmark for HPO in Reinforcement Learning},
     author = {Gresa Shala and Sebastian Pineda Arango and André Biedenkapp and Frank Hutter and Josif Grabocka},
     year = {2024},
-    booktitle = {Proceedings of the Third International Conference on Automated Machine Learning (AutoML'24), ABCD Track},
+    booktitle = {Proceedings of the Third International Conference on Automated Machine Learning (AutoML'24)},
+    specialtrack = {ABCD Track},
     bibtex_show={true},
     openreview = {MlB61zPAeR},
     code = {https://github.com/releaunifreiburg/HPO-RL-Bench},
