FIX special track not previously shown in the rendered bibtex for a "booktitle"

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,10 +4,8 @@
   title = {Contextual Intelligence: The Next Leap for Reinforcement Learning},
   author = {Biedenkapp, André},
   year = {2026},
-  booktitle    = {Proceedings of the 25th International Conference on Autonomous Agents
-                  and Multiagent Systems, {AAMAS}'26},
-  publisher    = {International Foundation for Autonomous Agents and Multiagent Systems
-                  / {ACM}},
+  booktitle    = {Proceedings of the 25th International Conference on Autonomous Agents and Multiagent Systems, {AAMAS}'26},
+  publisher    = {International Foundation for Autonomous Agents and Multiagent Systems / {ACM}},
   specialtrack = {Blue Sky Ideas Track},
   bibtex_show={true},
   openreview={vtz8ZWRz67},
@@ -178,10 +176,11 @@ policies in CANDID action spaces. In addition, they overcome the scalability lim
 single policy across all action dimensions. The code used for our experiments is available under
 https://github.com/PhilippBordne/candidDAC.",
 author = "Philipp Bordne and M. Asif Hasan and Eddie Bergman and Noor Awad and André Biedenkapp",
-booktitle = {Proceedings of the Third International Conference on Automated Machine Learning (AutoML 2024), Workshop Track},
+booktitle = {Proceedings of the Third International Conference on Automated Machine Learning (AutoML 2024)},
 year = "2024",
 bibtex_show={true},
 openreview = {ZCCZYfstkG},
+specialtrack = {Workshop Track},
 arxiv = {arXiv:2407.05789},
 code = {https://github.com/PhilippBordne/candidDAC},
 talk={https://www.youtube.com/watch?v=RtdkkK-JIM8&feature=youtu.be},
